# tauri-plugin-machine-uid

./: .gitignore  Cargo.toml  README.md  bindings.ts  build-plugin.sh  build.rs  package.json  tsconfig.json
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  ExamplePlugin.kt  MachineUidPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
ios/tauri-plugin-machine-uid/: ExamplePlugin.swift
ios/tauri-plugin-machine-uid.xcodeproj/: project.pbxproj
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_machine_id.toml  get_machine_uid.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
