[package]
name = "tauri-plugin-machine-uid"
version = "0.1.0"
authors = [ "Florian Stasse <f.stasse@skipperndt.com>" ]
description = ""
edition = "2024"
rust-version = "1.85"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-machine-uid"

[dependencies]
tauri = { version = "2" }
serde = "1"
thiserror = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
machine-uid = { version = "0.5.3" }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
